feat: create `auth` module with generating `jwt` access and refresh tokens; add `public` decorator for open `public` routes
