# src/modules/auth/dto/refresh-token.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString } from 'class-validator';
+
+export class RefreshTokenDto {
+  @ApiProperty({
+    description: 'Refresh token.',
+  })
+  @IsString()
+  refreshToken: string;
+}
